# mafia

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
agents/: god.py  player.py  tools.py
data/: personalities.json
game/: mafia_game.py  types.py
utils/: json_loader.py  memory.py
